--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body {font-size:16px;}
   <div  class="w3-row-padding">
     <div class="w3-col  w3-margin-bottom">
       <div class="w3-sand">
-        <h1 class="w3-xxlarge w3-text-deep-orange w3-margin-left">Mallorca
+        <h1 class="w3-xxlarge w3-text-deep-orange w3-margin-left">Mallorca TODAY
           <i class="fas fa-star fa-xs"></i>
           <i class="fas fa-star fa-xs"></i>
           <i class="fas fa-star fa-xs"></i>
